; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_expander.c_sas_discover_expander.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_expander.c_sas_discover_expander.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain_device = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c"expander %016llx discovery failed(0x%x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.domain_device*)* @sas_discover_expander to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sas_discover_expander(%struct.domain_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.domain_device*, align 8
  %4 = alloca i32, align 4
  store %struct.domain_device* %0, %struct.domain_device** %3, align 8
  %5 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %6 = call i32 @sas_notify_lldd_dev_found(%struct.domain_device* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %48

11:                                               ; preds = %1
  %12 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %13 = call i32 @sas_ex_general(%struct.domain_device* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %44

17:                                               ; preds = %11
  %18 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %19 = call i32 @sas_ex_manuf_info(%struct.domain_device* %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  br label %44

23:                                               ; preds = %17
  %24 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %25 = call i32 @sas_expander_discover(%struct.domain_device* %24)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %23
  %29 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %30 = getelementptr inbounds %struct.domain_device, %struct.domain_device* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @SAS_ADDR(i32 %31)
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @SAS_DPRINTK(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33)
  br label %44

35:                                               ; preds = %23
  %36 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %37 = call i32 @sas_check_ex_subtractive_boundary(%struct.domain_device* %36)
  %38 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %39 = call i32 @sas_check_parent_topology(%struct.domain_device* %38)
  store i32 %39, i32* %4, align 4
  %40 = load i32, i32* %4, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %35
  br label %44

43:                                               ; preds = %35
  store i32 0, i32* %2, align 4
  br label %48

44:                                               ; preds = %42, %28, %22, %16
  %45 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %46 = call i32 @sas_notify_lldd_dev_gone(%struct.domain_device* %45)
  %47 = load i32, i32* %4, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %44, %43, %9
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @sas_notify_lldd_dev_found(%struct.domain_device*) #1

declare dso_local i32 @sas_ex_general(%struct.domain_device*) #1

declare dso_local i32 @sas_ex_manuf_info(%struct.domain_device*) #1

declare dso_local i32 @sas_expander_discover(%struct.domain_device*) #1

declare dso_local i32 @SAS_DPRINTK(i8*, i32, i32) #1

declare dso_local i32 @SAS_ADDR(i32) #1

declare dso_local i32 @sas_check_ex_subtractive_boundary(%struct.domain_device*) #1

declare dso_local i32 @sas_check_parent_topology(%struct.domain_device*) #1

declare dso_local i32 @sas_notify_lldd_dev_gone(%struct.domain_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
